# OthheloServer

./: .gitignore  CMakeLists.txt  OthheloServer.vcxproj  OttheloServer.sln  OttheloServer.vcxproj  game.cpp  game.h  main.cpp  othelloserver  othheloserver.cpp  othheloserver.h
OthheloServer/: OthheloServer.vcxproj
