cmake_minimum_required(VERSION 3.0)
project(othheloserver)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENTIONS OFF)
add_definitions(-DLinux_System)
add_executable(othelloserver main.cpp game.cpp othheloserver.cpp)
target_link_libraries(othelloserver pthread)