cmake_minimum_required(VERSION 3.0)
project(othheloserver)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENTIONS OFF)
find_package(OpenSSL REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR})
add_executable(othheloserver main.cpp game.cpp othheloserver.cpp)
target_link_libraries(othelloserver pthread OpenSSL::SSL OpenSSL::Crypto)
